# swiftfile

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/swift_share/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
lib/: main.dart  router.dart
lib/models/: transfer_item.dart
lib/screens/: home_screen.dart  receive_screen.dart  send_screen.dart  settings_screen.dart  transfers_screen.dart
lib/services/: bluetooth_service.dart  nearby_service.dart  transfer_provider.dart  wifi_transfer_service.dart
lib/widgets/: transfer_card.dart
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc.in  flutter_window.cpp  main.cpp  resource.h  utils.cpp  utils.h  win32_window.cpp  win32_window.h
